# scarb

./: Cargo.toml
extensions/scarb-test-collector/: Cargo.toml
extensions/scarb-test-collector/src/: lib.rs  main.rs
