[package]
name = "scarb-test-collector"
version.workspace = true
edition.workspace = true
publish = false

authors.workspace = true

[dependencies]
clap.workspace = true
scarb-metadata = { path = "../../scarb-metadata" }
scarb-ui = { path = "../../utils/scarb-ui" }
serde.workspace = true
serde_json.workspace = true
cairo-lang-casm = "2.2.0"
cairo-lang-compiler.workspace = true
cairo-lang-debug = "2.2.0"
cairo-lang-defs.workspace = true
cairo-lang-diagnostics = "2.2.0"
cairo-lang-filesystem.workspace = true
cairo-lang-lowering = "2.2.0"
cairo-lang-test-runner.workspace = true
cairo-lang-plugins = "2.2.0"
cairo-lang-project = "2.2.0"
cairo-lang-sierra-ap-change = "2.2.0"
cairo-lang-sierra-gas = "2.2.0"
cairo-lang-runner.workspace = true
cairo-lang-semantic.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-sierra-generator = "2.2.0"
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-syntax = "2.2.0"
cairo-lang-utils.workspace = true
anyhow.workspace = true
cairo-vm = "0.8.2"
cairo-felt = "0.8.2"
itertools.workspace = true
num-traits = "0.2.16"
thiserror.workspace = true
smol_str = { version = "0.2.0", features = ["serde"] }
num-bigint = "0.4"
num-integer = "0.1"

[dev-dependencies]
scarb-test-support = { path = "../../utils/scarb-test-support" }
snapbox.workspace = true
